# solo2

components/nitro-smartcard/: Cargo.toml  Makefile  README.md
components/nitro-smartcard/src/: nitro-smartcard.rs
